# multi-tap-example

./: .gitignore  .travis.yml  Makefile  Makefile.am  README.md  configure.ac  main.c  package.json
lib/: add.c  mult.c
src/: Makefile.am  main  main.c
test/: Makefile.am  add.c  add_test.c  mult.c  mult_test.c
